--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,73 +3,40 @@ name: Build Executables
 on:
   push:
     tags: ['v*']
-  workflow_dispatch:  # Allow manual triggers
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
-            name: Linux
-            artifact_name: AudioSlicer_Linux_x64
-          - os: windows-latest
-            name: Windows
-            artifact_name: AudioSlicer_Windows_x64
+            python: '3.10'
+            artifact: AudioSlicer_Linux_x64
+          - os: windows-latest  
+            python: '3.10'
+            artifact: AudioSlicer_Windows_x64.exe
           - os: macos-latest
-            name: macOS
-            artifact_name: AudioSlicer_macOS_x64
-
+            python: '3.11'  # Use 3.11 for macOS
+            artifact: AudioSlicer_macOS_x64
+    
     runs-on: ${{ matrix.os }}
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # Changed from 3.9 to 3.10
+        python-version: ${{ matrix.python }}
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Install Python dependencies
+      run: pip install -r requirements.txt pyinstaller
     
     - name: Build executable
       run: |
         pyinstaller --onefile slicer.py
-        # Rename the output file
         if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          mv dist/slicer.exe dist/${{ matrix.artifact_name }}.exe
+          mv dist/slicer.exe dist/${{ matrix.artifact }}
         else
-          mv dist/slicer dist/${{ matrix.artifact_name }}
+          mv dist/slicer dist/${{ matrix.artifact }}
         fi
-    
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.artifact_name }}
-        path: dist/${{ matrix.artifact_name }}*
-        retention-days: 30
-
-  create-release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    
-    steps:
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: ./artifacts
-    
-    - name: List files for debugging
-      run: find ./artifacts -type f
-    
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          ./artifacts/**/*
