--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,13 +55,25 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # This fixes the 403 error
+      contents: write
     
     steps:
-    - name: Download all artifacts
+    - name: Download Linux artifact
       uses: actions/download-artifact@v4
+      with:
+        name: AudioSlicer_Linux_x64
       
-    - name: List downloaded files
+    - name: Download Windows artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: AudioSlicer_Windows_x64.exe
+      
+    - name: Download macOS artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: AudioSlicer_macOS_x64
+    
+    - name: List files
       run: ls -la
       
     - name: Create Release
