revert: remove ffmpeg bundling, rely on pydub fallback

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,14 +33,6 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     
-    - name: Install system dependencies
-      run: |
-        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-          sudo apt-get update && sudo apt-get install -y ffmpeg
-        elif [ "${{ matrix.os }}" = "macos-13" ] || [ "${{ matrix.os }}" = "macos-latest" ]; then
-          brew install ffmpeg
-        fi
-    
     - name: Install Python dependencies
       run: |
         pip install --upgrade pip
@@ -48,7 +40,7 @@ jobs:
         pip install pyinstaller
     
     - name: Build executable
-      run: pyinstaller --onefile --add-binary="$(which ffmpeg):." --add-binary="$(which ffprobe):." slicer.py
+      run: pyinstaller --onefile slicer.py
         
     - name: Rename Linux/macOS executable
       if: matrix.os != 'windows-latest'
