--- a/slicer_settings.json
+++ b/slicer_settings.json
@@ -1,3 +1,3 @@
 {
-  "last_parent_folder": "/home/nando/Music/pydub tests/cuba"
+  "last_parent_folder": "/home/nando/Music/pydub tests/cuba/sequences"
 }
