--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pydub==0.25.1
-pandas==2.0.3
-openpyxl==3.1.2
-colorama==0.4.6
-eyed3==0.9.7
-numpy==1.24.3
+pydub>=0.25.1
+pandas>=1.5.0
+eyed3>=0.9.7
+colorama>=0.4.6
+openpyxl>=3.0.10
